# gohango

./: .gitignore  app.py  main.py  pyproject.toml  readme.md  requirements.txt  run.py
app/: __init__.py  db.py
app/main/: __init__.py  routes.py
app/menus/: __init__.py  routes.py
app/sample/: __init__.py  routes.py
app/services/: menus.py  soldout.py  users.py
app/setting/: __init__.py  routes.py
app/static/css/: ashita.css  header.css  index.css  layout.css  nav.css  setting.css  soldout.css
app/static/js/: header.js  menu_by_date.js  menu_today.js  nav.js  sample.js  setting.js  soldout.js
app/templates/: index.html  layout.html  menu_by_date.html  menu_today.html  menus.html  sample.html  setting.html  soldout.html
app/templates/components/: header.html  nav.html  soldout.html
docker/: compose.yaml  liquibase.properties
docker/migration/changelogs/: 01_create_tables.sql  02_create_tables_menus_soldoutreports.sql  03_insert_tables_menus.sql
